ajout du fichier css 1

--- a/ASSETS/styles.css
+++ b/ASSETS/styles.css
@@ -23,7 +23,7 @@
     width: 55%;
 }
 
-section { background-color: #EAEAEA;}
+/* section { background-color: #EAEAEA;} */
 h1{ 
     display: flex;
     justify-content: center;
