--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -1,13 +1,21 @@
-*{outline:1px solid red; }
+// *{outline:1px solid red; }
 $font-stack: roboto-regular, sans-serif;
 $font-stack2: "Roboto", sans-serif;
+$font-stack3:"Shrikhand", serif;
+$font-stack4:"Roboto Condensed", sans-serif;
 $Background-color: #F6F6F6;
 $main-primary:#9356DC;
 $main-Secondary:#FF79DA;
 $main-Tertiary:#99E2D0;
 $graduate-color:#9356DC,#FF79DA;
 $Background-color-cards:#EAEAEA;
-// @mixin gradient-background($direction, $color1, $color2, $color3) {
+@mixin flexbox { display: flex; justify-content: center; align-items: center;}
+@mixin flexdirectionrow {display: flex;flex-direction: row; }
+@mixin flexdirectioncolumn {display: flex;flex-direction: column; }
+// <uniquifier>: Use a unique and descriptive class name
+// <weight>: Use a value from 100 to 900
+
+// @mixin flexbox
 //     background: linear-gradient($direction, $color1, $color2, $color3);
 
 @mixin titre-h2{ }
@@ -25,11 +33,15 @@ $Background-color-cards:#EAEAEA;
     .roboto-regular {
     font-family: "Roboto", sans-serif;
 }
-a { 
+.link { 
     text-decoration: none;
+    // @include flexbox();
+    // width:340px ;
 }
 // header//
-
+header { 
+    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
+}
 .navbar {
     display: flex;
     justify-content: center;
@@ -38,11 +50,15 @@ a {
     height: 63px;
     background-color: white;
     padding: 0px;
-    // filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
-.logo {
+    // box-shadow: 0px 6px 12px -3px rgba(9, 0, 0, 0.7);
+    .logo {
     width: 55%;
+    
     }
 }
+// .navbar{ 
+//     box-shadow: 0px 6px 12px -3px rgba(9, 0, 0, 0.7);
+// }
 // body//
 body {
     margin: 0%;
@@ -59,8 +75,108 @@ main {
     height: 42px;
     background-color:$Background-color-cards ;
     padding: 0px;
-    // filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.2));
+    box-shadow: 0px 4.5px 9px 1px rgba(0, 0, 0, 9);
 }
+// Fonctionement//
+.Fonctionement {
+    width: 100%;
+    height: 400px;
+    margin-top: 10%;
+}
+.second-subtitle{
+    height: 317px;} 
+.steps { 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 440px;
+    padding-top: 3%;
+    margin-top: 10%;
+    gap: 0%;
+}
+.cards-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    // justify-content: center;
+    width: 300px;
+    height: 66px;
+    padding:0%;
+    box-sizing: border-box;
+    color: #000;
+    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
+    background-color: $Background-color;
+    border-radius:20px;
+    gap: 10%;
+}
+.ok { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+        height: 43px;
+}
+
+
+.ko {
+    display: flex;
+    justify-content: start;
+    width: 25px;
+    position: relative;
+    top: 1px;
+    left: 9px;
+}
+.cards-txt {
+    @include flexbox();
+    align-items: start;
+    flex-direction: column;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
+    width: 100%;
+    height: 74.25px;
+    padding: 0px;
+}
+.svg-steps {
+    display: flex;
+    justify-content: space-around;
+    padding-right: 23px;
+    padding-left: 25px;
+}
+.svg-circle{ 
+    position: relative;
+    top: 1px;
+    left: 9px;
+    padding-right: 0px;
+}
+.cards-link {
+    width: 100%;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    padding-left: 0px;
+    padding-right: 0px;
+}
+.cards-title {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    font-family: $font-stack4;
+    font-size: 16px;
+    width: 100%;
+    height: 22.67px;
+    margin: 0px;
+    margin-top: 0%;
+    padding-left: 0px;
+}
+.cards-subtitle {
+    font-size: 17px;
+    width: 326px;
+    height: 28px;
+    margin-top:8px;
+    margin: 0px;
+    padding-left: 4%;
+} 
+// Restaurant section//
 svg {
     display: flex;
     justify-content: space-around;
@@ -72,15 +188,19 @@ svg {
     align-items: center;
     font-family:$font-stack;
     width:30%;
-    height:19px;
-    padding-top: 3%;
+    height:42px;
+    padding-top: 0%;
     padding-left: 35%;
     padding-right: 35%;
     margin-top: 0%;
+    margin-bottom: 0%;
+    box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
 }
 .menu { 
+    padding-top: 5%;
     height: 274px;
     background-color: $Background-color;
+    box-shadow: 0px 0.5px 5px 1px rgba(0, 0, 0, 9);
 }
 h1 { 
     font-family: $font-stack;
@@ -124,6 +244,7 @@ h1 {
     border-radius: 37px;
     border:none;
     background: linear-gradient(3deg,  #9356DC 0%, #FF79DA 100%);
+    box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
     color: #FFFF;
     font-family: $font-stack;
     font-size: 16px;
@@ -142,17 +263,14 @@ h2 {
     padding-left: 3%;
     margin-bottom: 0px;
 }     
+}
+h2 { 
+    width: 73%;
+    margin-bottom: 0px;
+    margin-left: 4%;
+    margin-top: 10%;
+}
 
-}
-.steps { 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    ul{
-        width: 221px;
-    }
-}
 ul {
 .cards{
     display: flex;
@@ -160,23 +278,29 @@ ul {
     align-items: center;
     background-color: $Background-color-cards;
     padding: 0px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
 }
 }
 .restaurant-cards {
-    background-color: $Background-color
+    background-color: $Background-color;
+    padding-bottom: 20%;
+}
+.restaurants{
+@include flexdirectioncolumn();
+gap: 20px;
 }
 .card-content {
-            display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
+    display: flex;
+    align-items: start;
+    width: 100%;
     height: 66px;
     padding:0%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
+    color: #000;
+    font-family: $font-stack;
     background-color: white;
     border-radius:0px 0px 15px 15px;
 }
@@ -186,52 +310,58 @@ ul {
     flex-direction: column;
     text-overflow: ellipsis;
     box-sizing: border-box;
-    width: 220px;
+    width: 339px;
     height: 74.25px;
     padding: 0px;
 }
 .card-link {
     width: 100%;
-    height: 300px;
+    height: 240px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-left: 10px;
-  padding-right: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 .card-title {
     font-size: 18px;
+    width: 326px;
+    height: 24px;
     margin: 0px;
-    padding:0px;
+    padding-top: 13px;
+    padding-left: 4%;
 }
 .card-subtitle {
     font-size: 17px;
-    width: 213px;
-    height: 24px;
+    width: 326px;
+    height: 28px;
     margin-top:8px;
-    margin-bottom: 10px;
-    padding-left: 3%;
+    margin: 0px;
+    padding-left: 4%;
 } 
 .card img {
-    width: 80%;
-    height: 50%;
+    width: 100%;
+    height: 174px;
     object-fit: cover;
     border-radius: 15px 15px 0px 0px;
+    @include flexbox();
+}
+.card-set{ 
+width: 100%;
 
 }
+
 .euro {
     font-weight: 700;
 }
-.food-img {
-    width: 50%;
 
-}
     .card {
-    //     display: flex;
-    // justify-content: center;
+        display: flex;
+    justify-content: center;
     // align-items: center;
     background-color: $Background-color-cards;
     // border-radius: 20px;
+    width: 340px;
+    height: 240px;
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
@@ -239,8 +369,23 @@ ul {
 // footer//
 
 footer {
+    padding-left: 5%;
+    @include flexdirectioncolumn();
+    gap: 20px;
     background-color: #353535;
     color: white;
+p{
+    display: flex;
+    padding-bottom: 2%;
+    margin: 0px;
+    font-family: $font-stack2;
+    font-size: 16px;
+}
+h3 {
+    width: 136px;
+    font-size: 16px;
+    font-family: $font-stack3;
+}
 }
 
   /*# sourceMappingURL=main.css.map */
