--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -1,7 +1,3 @@
-* {
-  outline: 1px solid red;
-}
-
 @media only screen and (max-width: 768px) {
   .shrikhand-regular {
     font-family: "Shrikhand", serif;
@@ -9,8 +5,11 @@
   .roboto-regular {
     font-family: "Roboto", sans-serif;
   }
-  a {
+  .link {
     text-decoration: none;
+  }
+  header {
+    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
   }
   .navbar {
     display: flex;
@@ -36,6 +35,105 @@
     height: 42px;
     background-color: #EAEAEA;
     padding: 0px;
+    box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
+  }
+  .Fonctionement {
+    width: 100%;
+    height: 400px;
+    margin-top: 10%;
+  }
+  .second-subtitle {
+    height: 317px;
+  }
+  .steps {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 440px;
+    padding-top: 3%;
+    margin-top: 10%;
+    gap: 0%;
+  }
+  .cards-content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 300px;
+    height: 66px;
+    padding: 0%;
+    box-sizing: border-box;
+    color: #000;
+    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
+    background-color: #F6F6F6;
+    border-radius: 20px;
+    gap: 10%;
+  }
+  .ok {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 43px;
+  }
+  .ko {
+    display: flex;
+    justify-content: start;
+    width: 25px;
+    position: relative;
+    top: 1px;
+    left: 9px;
+  }
+  .cards-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: start;
+    flex-direction: column;
+    text-overflow: ellipsis;
+    box-sizing: border-box;
+    width: 100%;
+    height: 74.25px;
+    padding: 0px;
+  }
+  .svg-steps {
+    display: flex;
+    justify-content: space-around;
+    padding-right: 23px;
+    padding-left: 25px;
+  }
+  .svg-circle {
+    position: relative;
+    top: 1px;
+    left: 9px;
+    padding-right: 0px;
+  }
+  .cards-link {
+    width: 100%;
+    height: 240px;
+    display: flex;
+    justify-content: center;
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+  .cards-title {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 16px;
+    width: 100%;
+    height: 22.67px;
+    margin: 0px;
+    margin-top: 0%;
+    padding-left: 0px;
+  }
+  .cards-subtitle {
+    font-size: 17px;
+    width: 326px;
+    height: 28px;
+    margin-top: 8px;
+    margin: 0px;
+    padding-left: 4%;
   }
   svg {
     display: flex;
@@ -48,15 +146,19 @@
     align-items: center;
     font-family: roboto-regular, sans-serif;
     width: 30%;
-    height: 19px;
-    padding-top: 3%;
+    height: 42px;
+    padding-top: 0%;
     padding-left: 35%;
     padding-right: 35%;
     margin-top: 0%;
+    margin-bottom: 0%;
+    box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
   }
   .menu {
+    padding-top: 5%;
     height: 274px;
     background-color: #F6F6F6;
+    box-shadow: 0px 0.5px 5px 1px rgb(0, 0, 0);
   }
   h1 {
     font-family: roboto-regular, sans-serif;
@@ -101,6 +203,7 @@
     border-radius: 37px;
     border: none;
     background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
+    box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
     color: white;
     font-family: roboto-regular, sans-serif;
     font-size: 16px;
@@ -117,14 +220,11 @@
     padding-left: 3%;
     margin-bottom: 0px;
   }
-  .steps {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .steps ul {
-    width: 221px;
+  h2 {
+    width: 73%;
+    margin-bottom: 0px;
+    margin-left: 4%;
+    margin-top: 10%;
   }
   ul .cards {
     display: flex;
@@ -132,22 +232,29 @@
     align-items: center;
     background-color: #EAEAEA;
     padding: 0px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+    box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
   }
   .restaurant-cards {
     background-color: #F6F6F6;
+    padding-bottom: 20%;
+  }
+  .restaurants {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
   .card-content {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
+    align-items: start;
+    width: 100%;
     height: 66px;
     padding: 0%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     box-sizing: border-box;
+    color: #000;
+    font-family: roboto-regular, sans-serif;
     background-color: white;
     border-radius: 0px 0px 15px 15px;
   }
@@ -157,53 +264,78 @@
     flex-direction: column;
     text-overflow: ellipsis;
     box-sizing: border-box;
-    width: 220px;
+    width: 339px;
     height: 74.25px;
     padding: 0px;
   }
   .card-link {
     width: 100%;
-    height: 300px;
+    height: 240px;
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 0px;
+    padding-right: 0px;
   }
   .card-title {
     font-size: 18px;
+    width: 326px;
+    height: 24px;
     margin: 0px;
-    padding: 0px;
+    padding-top: 13px;
+    padding-left: 4%;
   }
   .card-subtitle {
     font-size: 17px;
-    width: 213px;
-    height: 24px;
+    width: 326px;
+    height: 28px;
     margin-top: 8px;
-    margin-bottom: 10px;
-    padding-left: 3%;
+    margin: 0px;
+    padding-left: 4%;
   }
   .card img {
-    width: 80%;
-    height: 50%;
+    width: 100%;
+    height: 174px;
     object-fit: cover;
     border-radius: 15px 15px 0px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .card-set {
+    width: 100%;
   }
   .euro {
     font-weight: 700;
   }
-  .food-img {
-    width: 50%;
-  }
   .card {
+    display: flex;
+    justify-content: center;
     background-color: #EAEAEA;
+    width: 340px;
+    height: 240px;
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
   }
 }
 footer {
+  padding-left: 5%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
   background-color: #353535;
   color: white;
+}
+footer p {
+  display: flex;
+  padding-bottom: 2%;
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
+footer h3 {
+  width: 136px;
+  font-size: 16px;
+  font-family: "Shrikhand", serif;
 }
 
 
