--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -1,322 +1,384 @@
-@media only screen and (max-width: 768px) {
-  .shrikhand-regular {
-    font-family: "Shrikhand", serif;
-  }
-  .roboto-regular {
-    font-family: "Roboto", sans-serif;
-  }
-  .link {
-    text-decoration: none;
-  }
-  header {
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-  }
-  .navbar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 63px;
-    background-color: white;
-    padding: 0px;
-  }
-  .navbar .logo {
-    width: 55%;
-  }
-  body {
-    margin: 0%;
-  }
-  main {
-    background-color: white;
-    width: 100%;
-  }
-  .cards {
-    width: 100%;
-    height: 42px;
-    background-color: #EAEAEA;
-    padding: 0px;
-    box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
-  }
-  .Fonctionement {
-    width: 100%;
-    height: 400px;
-    margin-top: 10%;
-  }
-  .second-subtitle {
-    height: 317px;
-  }
-  .steps {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 440px;
-    padding-top: 3%;
-    margin-top: 10%;
-    gap: 0%;
-  }
-  .cards-content {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 300px;
-    height: 66px;
-    padding: 0%;
-    box-sizing: border-box;
-    color: #000;
-    box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
-    background-color: #F6F6F6;
-    border-radius: 20px;
-    gap: 10%;
-  }
-  .ok {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 43px;
-  }
-  .ko {
-    display: flex;
-    justify-content: start;
-    width: 25px;
-    position: relative;
-    top: 1px;
-    left: 9px;
-  }
-  .cards-txt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-items: start;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
-    width: 100%;
-    height: 74.25px;
-    padding: 0px;
-  }
-  .svg-steps {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 23px;
-    padding-left: 25px;
-  }
-  .svg-circle {
-    position: relative;
-    top: 1px;
-    left: 9px;
-    padding-right: 0px;
-  }
-  .cards-link {
-    width: 100%;
-    height: 240px;
-    display: flex;
-    justify-content: center;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .cards-title {
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 16px;
-    width: 100%;
-    height: 22.67px;
-    margin: 0px;
-    margin-top: 0%;
-    padding-left: 0px;
-  }
-  .cards-subtitle {
-    font-size: 17px;
-    width: 326px;
-    height: 28px;
-    margin-top: 8px;
-    margin: 0px;
-    padding-left: 4%;
-  }
-  svg {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 10px;
-  }
-  .location {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: roboto-regular, sans-serif;
-    width: 30%;
-    height: 42px;
-    padding-top: 0%;
-    padding-left: 35%;
-    padding-right: 35%;
-    margin-top: 0%;
-    margin-bottom: 0%;
-    box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
-  }
-  .menu {
-    padding-top: 5%;
-    height: 274px;
-    background-color: #F6F6F6;
-    box-shadow: 0px 0.5px 5px 1px rgb(0, 0, 0);
-  }
-  h1 {
-    font-family: roboto-regular, sans-serif;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-size: 24px;
-    width: 74%;
-    height: 68px;
-    padding-left: 13%;
-    padding-right: 13%;
-    background-color: #F6F6F6;
-    margin: 0%;
-  }
-  .text-hp {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    font-family: "Roboto", sans-serif;
-    width: 75%;
-    font-weight: lighter;
-    font-size: 16px;
-    padding-left: 12%;
-    padding-right: 13%;
-    margin-left: 0%;
-    padding-bottom: 10%;
-    margin-bottom: 0%;
-    margin-top: 0px;
-    color: #000;
-    background-color: #F6F6F6;
-  }
-  .explore-button {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F6F6F6;
-  }
-  .explore-button .gradient-btn {
-    width: 58%;
-    height: 50px;
-    border-radius: 37px;
-    border: none;
-    background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
-    box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
-    color: white;
-    font-family: roboto-regular, sans-serif;
-    font-size: 16px;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .gradient-btn :hover {
-    color: #F6F6F6;
-  }
-  .Fonctionement h2 {
-    width: 73%;
-    font-size: 26px;
-    font-family: roboto-regular, sans-serif;
-    padding-left: 3%;
-    margin-bottom: 0px;
-  }
-  h2 {
-    width: 73%;
-    margin-bottom: 0px;
-    margin-left: 4%;
-    margin-top: 10%;
-  }
-  ul .cards {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #EAEAEA;
-    padding: 0px;
-    box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
-  }
-  .restaurant-cards {
-    background-color: #F6F6F6;
-    padding-bottom: 20%;
-  }
-  .restaurants {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  .card-content {
-    display: flex;
-    align-items: start;
-    width: 100%;
-    height: 66px;
-    padding: 0%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    box-sizing: border-box;
-    color: #000;
-    font-family: roboto-regular, sans-serif;
-    background-color: white;
-    border-radius: 0px 0px 15px 15px;
-  }
-  .card-txt {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    text-overflow: ellipsis;
-    box-sizing: border-box;
-    width: 339px;
-    height: 74.25px;
-    padding: 0px;
-  }
-  .card-link {
-    width: 100%;
-    height: 240px;
-    display: flex;
-    justify-content: center;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-  .card-title {
-    font-size: 18px;
-    width: 326px;
-    height: 24px;
-    margin: 0px;
-    padding-top: 13px;
-    padding-left: 4%;
-  }
-  .card-subtitle {
-    font-size: 17px;
-    width: 326px;
-    height: 28px;
-    margin-top: 8px;
-    margin: 0px;
-    padding-left: 4%;
-  }
-  .card img {
-    width: 100%;
-    height: 174px;
-    object-fit: cover;
-    border-radius: 15px 15px 0px 0px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .card-set {
-    width: 100%;
-  }
-  .euro {
-    font-weight: 700;
-  }
-  .card {
-    display: flex;
-    justify-content: center;
-    background-color: #EAEAEA;
-    width: 340px;
-    height: 240px;
-    padding: 0px;
-    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-  }
+* {
+  outline: 1px solid red;
 }
+
+.shrikhand-regular {
+  font-family: "Shrikhand", serif;
+}
+
+.roboto-regular {
+  font-family: "Roboto", sans-serif;
+}
+
+.link {
+  text-decoration: none;
+}
+
+header {
+  box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
+}
+
+.navbar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 63px;
+  background-color: white;
+  padding: 0px;
+}
+.navbar .logo {
+  width: 55%;
+}
+
+body {
+  margin: 0%;
+}
+
+main {
+  background-color: white;
+  width: 100%;
+}
+
+.cards {
+  width: 100%;
+  height: 42px;
+  background-color: #EAEAEA;
+  padding: 0px;
+  box-shadow: 0px 4.5px 9px 1px rgb(0, 0, 0);
+}
+
+.Fonctionement {
+  width: 100%;
+  height: 400px;
+  margin-top: 10%;
+}
+
+.steps {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 440px;
+  padding-top: 3%;
+  margin-top: 10%;
+  gap: 10%;
+}
+
+.cards-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 300px;
+  height: 66px;
+  padding: 0%;
+  box-sizing: border-box;
+  color: #000;
+  box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
+  background-color: #F6F6F6;
+  border-radius: 20px;
+  gap: 10%;
+}
+
+.ok {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 43px;
+}
+
+.ko {
+  display: flex;
+  justify-content: start;
+  width: 25px;
+  position: relative;
+  top: 1px;
+  left: 9px;
+}
+
+.cards-txt {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-items: start;
+  flex-direction: column;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+  width: 100%;
+  height: 74.25px;
+  padding: 0px;
+}
+
+.svg-steps {
+  display: flex;
+  justify-content: space-around;
+  padding-right: 23px;
+  padding-left: 25px;
+}
+
+.svg-circle {
+  position: relative;
+  top: 1px;
+  left: 9px;
+  padding-right: 0px;
+}
+
+.cards-link {
+  width: 100%;
+  height: 240px;
+  display: flex;
+  justify-content: center;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.cards-title {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 16px;
+  width: 100%;
+  height: 22.67px;
+  margin: 0px;
+  margin-top: 0%;
+  padding-left: 0px;
+}
+
+.cards-subtitle {
+  font-size: 17px;
+  width: 326px;
+  height: 28px;
+  margin-top: 8px;
+  margin: 0px;
+  padding-left: 4%;
+}
+
+svg {
+  display: flex;
+  justify-content: space-around;
+  padding-right: 10px;
+}
+
+.location {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: roboto-regular, sans-serif;
+  width: 30%;
+  height: 42px;
+  padding-top: 0%;
+  padding-left: 35%;
+  padding-right: 35%;
+  margin-top: 0%;
+  margin-bottom: 0%;
+  box-shadow: 0px 0.1px 0.5px 0px rgba(9, 0, 0, 0.5);
+}
+
+.menu {
+  padding-top: 5%;
+  height: 274px;
+  background-color: #F6F6F6;
+  box-shadow: 0px 0.5px 5px 1px rgb(0, 0, 0);
+}
+
+h1 {
+  font-family: roboto-regular, sans-serif;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-size: 24px;
+  width: 74%;
+  height: 68px;
+  padding-left: 13%;
+  padding-right: 13%;
+  background-color: #F6F6F6;
+  margin: 0%;
+}
+
+.text-hp {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  width: 75%;
+  font-weight: lighter;
+  font-size: 16px;
+  padding-left: 12%;
+  padding-right: 13%;
+  margin-left: 0%;
+  padding-bottom: 10%;
+  margin-bottom: 0%;
+  margin-top: 0px;
+  color: #000;
+  background-color: #F6F6F6;
+}
+
+.explore-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F6F6;
+}
+.explore-button #gradient-btn {
+  width: 58%;
+  height: 50px;
+  border-radius: 37px;
+  border: none;
+  background: linear-gradient(3deg, #9356DC 0%, #FF79DA 100%);
+  box-shadow: 0px 4px 9.5px 0px rgba(9, 0, 0, 0.5);
+  color: white;
+  font-family: roboto-regular, sans-serif;
+  font-size: 16px;
+  padding-left: 0px;
+  padding-right: 0px;
+  text-decoration: none;
+}
+.explore-button :hover {
+  color: #F6F6F6;
+}
+
+#gradient-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#gradient-btn a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: white;
+  padding-top: 5%;
+}
+
+.Fonctionement {
+  width: 100%;
+  height: 318px;
+  margin-top: 10%;
+}
+
+.Fonctionement h2 {
+  width: 73%;
+  font-size: 26px;
+  font-family: roboto-regular, sans-serif;
+  padding-left: 3%;
+  margin-bottom: 0px;
+}
+
+h2 {
+  width: 73%;
+  margin-bottom: 0px;
+  margin-left: 4%;
+  margin-top: 10%;
+}
+
+ul .cards {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #EAEAEA;
+  padding: 0px;
+  box-shadow: 0px 1px 3px 0px rgba(9, 0, 0, 0.5);
+}
+
+.restaurant-cards {
+  background-color: #F6F6F6;
+  padding-bottom: 20%;
+}
+
+#restaurants {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+#restaurants h2 {
+  margin-left: 5%;
+}
+
+.card-content {
+  display: flex;
+  align-items: start;
+  width: 100%;
+  height: 66px;
+  padding: 0%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  color: #000;
+  font-family: roboto-regular, sans-serif;
+  background-color: white;
+  border-radius: 0px 0px 15px 15px;
+}
+
+.card-txt {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  text-overflow: ellipsis;
+  box-sizing: border-box;
+  width: 339px;
+  height: 74.25px;
+  padding: 0px;
+}
+
+.card-link {
+  width: 100%;
+  height: 240px;
+  display: flex;
+  justify-content: center;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.card-title {
+  font-size: 18px;
+  width: 326px;
+  height: 24px;
+  margin: 0px;
+  padding-top: 13px;
+  padding-left: 4%;
+}
+
+.card-subtitle {
+  font-size: 17px;
+  width: 326px;
+  height: 28px;
+  margin-top: 8px;
+  margin: 0px;
+  padding-left: 4%;
+}
+
+.card img {
+  width: 100%;
+  height: 174px;
+  object-fit: cover;
+  border-radius: 15px 15px 0px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-set {
+  width: 100%;
+}
+
+.euro {
+  font-weight: 700;
+}
+
+.card {
+  display: flex;
+  justify-content: center;
+  background-color: #EAEAEA;
+  width: 340px;
+  height: 240px;
+  padding: 0px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+}
+
 footer {
   padding-left: 5%;
   display: flex;
@@ -338,6 +400,72 @@ footer h3 {
   font-family: "Shrikhand", serif;
 }
 
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 63px;
+    background-color: white;
+    padding: 0px;
+  }
+  .navbar .logo {
+    width: 30%;
+  }
+  .location {
+    font-size: 28px;
+  }
+  .text-hp {
+    font-size: 14px;
+  }
+  .explore-button #gradient-btn {
+    width: 38%;
+    height: 56px;
+    font-size: 16px;
+  }
+  .three-cards-set {
+    width: 100%;
+    height: 170px;
+    padding-top: 0px;
+  }
+  .steps {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    height: 229px;
+    margin-top: 0px;
+    padding-top: 0%;
+    gap: 1%;
+  }
+  .ok {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 45%;
+    height: 76.38px;
+  }
+  .Fonctionement {
+    width: 100%;
+    height: 239px;
+    margin-bottom: 0px;
+    margin-top: 0%;
+  }
+  .cards-content {
+    width: 85%;
+  }
+  #restaurants {
+    margin-top: 0px;
+  }
+  #restaurants h2 {
+    margin-top: 0px;
+  }
+  .restaurant-cards {
+    padding-bottom: 0px;
+    margin-bottom: 5%;
+  }
+}
 
 
 /*# sourceMappingURL=styles.css.map */
