--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -12,12 +12,6 @@ $Background-color-cards:#EAEAEA;
 @mixin flexbox { display: flex; justify-content: center; align-items: center;}
 @mixin flexdirectionrow {display: flex;flex-direction: row; }
 @mixin flexdirectioncolumn {display: flex;flex-direction: column; }
-// <uniquifier>: Use a unique and descriptive class name
-// <weight>: Use a value from 100 to 900
-
-// @mixin flexbox
-//     background: linear-gradient($direction, $color1, $color2, $color3);
-
 // }
     *{outline:1px solid red;
 
@@ -73,17 +67,18 @@ main {
 .steps { 
     display: flex;
     flex-direction: row;
+    justify-content: center;
     align-items: center;
     width: 100%;
     height: 228.38px;
-    gap: 10%;
+    gap: 0%;
 }
 .cards-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 300px;
-    height: 66px;
+    width: 93%;
+    height: 73px;
     padding:0%;
     box-sizing: border-box;
     color: #000;
@@ -96,7 +91,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 43px;
+    width: 60%;
+    height: 73px;
 }
 .ko {
     display: flex;
@@ -141,7 +137,7 @@ main {
     align-items: center;
     flex-direction: row;
     font-family: $font-stack4;
-    font-size: 16px;
+    font-size: 18px;
     width: 100%;
     height: 22.67px;
     margin: 0px;
@@ -198,7 +194,7 @@ h1 {
     display: flex;
     justify-content: center;
     text-align: center;;
-    font-size: 40px;
+    font-size: 28px;
     margin-right: 0px;
     width: 62%;
     margin-left: 21%;
@@ -217,7 +213,7 @@ h1 {
     justify-content: center;
     text-align: center;
     font-family:$font-stack2;
-    width: 39%;
+    width: 45%;
     height: 49px;
     font-weight: lighter;
     font-size: 16px;
@@ -238,7 +234,7 @@ h1 {
     align-items: center;
     background-color:$Background-color;
 #gradient-btn{
-    width: 16%;
+    width: 22%;
     height: 50px;
     border-radius: 37px;
     border:none;
@@ -308,25 +304,23 @@ ul {
 gap: 20px;
 h2{
     padding-top: 30px;
+    padding-left: 12%;
     padding-bottom: 0px;
     margin-top: 0px;
     margin-left: 0px;
     margin-bottom: 2%;
 }
 }
-// #restaurants{ 
-    
-// }
 .card-section {
     display: grid;
-    align-items: center;
-    justify-content: center;
     grid-template-columns: 31% 31%;
-    gap: 85px;
-    width: 989px;
-    padding-left: 180px;
-    padding-right: 180px;
-
+    justify-content: center;
+    align-items: center;
+    gap: 14%;
+    width: 100%;
+    height: 558px;
+    margin-left: 0%;
+    margin-right: 0%;
 }
 .card-content {
     display: flex;
@@ -354,7 +348,7 @@ h2{
     padding: 0px;
 }
 .card-link {
-    width: 26%;
+    width: 100%;
     height: 240px;
     padding-left: 0px;
     padding-right: 0px;
@@ -384,40 +378,34 @@ h2{
 }
 .card-set{ 
 width: 100%;
-
 }
-
 .euro {
     font-weight: 700;
 }
-
-    .card {
-        display: flex;
+.card {
+    display: flex;
     justify-content: center;
-    // align-items: center;
     background-color: $Background-color-cards;
-    // border-radius: 20px;
-    width: 340px;
+    width:100%;
     height: 240px;
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
-// }
 // footer//
 
 footer {
     display: flex;
-    padding-left: 5%;
+    padding-left: 0%;
+    padding-right: 2%;
     justify-content: end;
     gap: 20px;
     background-color: #353535;
     color: white;
     align-items: flex-end;
-    gap: 20px;
-    .footer-section{ 
-        display: flex;
-        flex-direction: row;
-    }
+.footer-section{ 
+    display: flex;
+    flex-direction: row;
+}
 p{
     display: flex;
     padding-bottom: 2%;
@@ -439,9 +427,9 @@ h3 {
     gap: 20px;
     margin-top: 16px;
 }
+} 
 }
 @media screen and (min-width:769px) and (max-width: 1024px) {
-
 // header//
 header { 
     box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
@@ -464,7 +452,6 @@ body {
     margin: 0%;
 }
 // main//
-
 main {
     width: 100%;
 }
@@ -475,7 +462,6 @@ main {
     padding: 0px;
     box-shadow: 0px 4.5px 9px 1px rgba(0, 0, 0, 9);
 }
-
 .three-cards-set{
     @include flexdirectionrow();
     width: 100%;
@@ -488,13 +474,13 @@ main {
     align-items: center;
     width: 100%;
     height: 228.38px;
-    gap: 10%;
+    gap: 0%;
 }
 .cards-content {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 300px;
+    width: 85%;
     height: 66px;
     padding:0%;
     box-sizing: border-box;
@@ -509,6 +495,7 @@ main {
     justify-content: center;
     align-items: center;
     height: 43px;
+    width: 100%;
 }
 .ko {
     display: flex;
@@ -553,7 +540,7 @@ main {
     align-items: center;
     flex-direction: row;
     font-family: $font-stack4;
-    font-size: 16px;
+    font-size: 12px;
     width: 100%;
     height: 22.67px;
     margin: 0px;
@@ -610,10 +597,10 @@ h1 {
     display: flex;
     justify-content: center;
     text-align: center;;
-    font-size: 40px;
+    font-size: 22px;
     margin-right: 0px;
-    width: 62%;
-    margin-left: 21%;
+    width: 100%;
+    margin-left: 0%;
     margin-right: 0px;
     margin-bottom: 0px;
     padding-left: 0px;
@@ -629,14 +616,14 @@ h1 {
     justify-content: center;
     text-align: center;
     font-family:$font-stack2;
-    width: 39%;
+    width: 100%;
     height: 49px;
     font-weight: lighter;
     font-size: 16px;
     padding-left: 0px;
     padding-right: 0px;
     padding-bottom: 0%;
-    margin-left: 32%;
+    margin-left: 0%;
     margin-bottom: 0%;
     margin-top: 0px;
     color: #000;
@@ -650,7 +637,7 @@ h1 {
     align-items: center;
     background-color:$Background-color;
 #gradient-btn{
-    width: 16%;
+    width: 28%;
     height: 50px;
     border-radius: 37px;
     border:none;
@@ -666,7 +653,6 @@ h1 {
 :hover {
     color: #F6F6F6;
 }
-
 }
 #gradient-btn{
     @include flexbox();
@@ -682,7 +668,6 @@ a {
     height: 260px;
     margin-top: 0%;
 }
-
 .Fonctionement{
 h2 {
     width: 73%;
@@ -699,7 +684,6 @@ h2 {
     margin-left: 4%;
     margin-top: 10%;
 }
-
 ul {
 .cards{
     display: flex;
@@ -726,19 +710,15 @@ h2{
     margin-bottom: 2%;
 }
 }
-// #restaurants{ 
-    
-// }
 .card-section {
     display: grid;
     align-items: center;
     justify-content: center;
-    grid-template-columns: 31% 31%;
-    gap: 85px;
-    width: 989px;
-    padding-left: 180px;
-    padding-right: 180px;
-
+    grid-template-columns: 44% 44%;
+    gap: 25px;
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 0px;
 }
 .card-content {
     display: flex;
@@ -802,21 +782,16 @@ width: 100%;
 .euro {
     font-weight: 700;
 }
-
-    .card {
-        display: flex;
+.card {
+    display: flex;
     justify-content: center;
-    // align-items: center;
     background-color: $Background-color-cards;
-    // border-radius: 20px;
     width: 340px;
     height: 240px;
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
-// }
 // footer//
-
 footer {
     display: flex;
     padding-left: 5%;
@@ -826,10 +801,10 @@ footer {
     color: white;
     align-items: flex-end;
     gap: 20px;
-    .footer-section{ 
-        display: flex;
-        flex-direction: row;
-    }
+.footer-section{ 
+    display: flex;
+    flex-direction: row;
+}
 p{
     display: flex;
     padding-bottom: 2%;
@@ -851,34 +826,9 @@ h3 {
     gap: 20px;
     margin-top: 16px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 }
-
-@media only screen and (max-width: 768px) {
+}
+@media only screen and (max-width: 768px) { 
 
 .shrikhand-regular {
     font-family: "Shrikhand", serif;
@@ -907,13 +857,10 @@ header {
     object-fit: contain;
 }
 }
-
 body {
     margin: 0%;
 }
-
 // main//
-
 main {
     width: 100%;
 }
@@ -960,8 +907,6 @@ main {
     width: 90%;
     height: 43px;
 }
-
-
 .ko {
     display: flex;
     justify-content: start;
@@ -1134,7 +1079,6 @@ a {
     height: 440px;
     margin-top: 0%;
 }
-
 .Fonctionement{
 h2 {
     width: 73%;
@@ -1152,7 +1096,6 @@ h2 {
     margin-left: 4%;
     margin-top: 10%;
 }
-
 ul {
 .cards{
     display: flex;
@@ -1179,8 +1122,6 @@ h2{
     margin-bottom: 5%;
 }
 }
-// #restaurants{ 
-    
 // }
 .card-section {
     display: grid;
@@ -1189,6 +1130,7 @@ h2{
     grid-template-columns: 90%;
     gap: 18px;
     width: 100%;
+    height: 1015px;
     padding: 0%;
 }
 .card-content {
@@ -1247,13 +1189,10 @@ h2{
 }
 .card-set{ 
 width: 100%;
-
 }
-
 .euro {
     font-weight: 700;
 }
-
 .card {
     display: flex;
     justify-content: center;
@@ -1263,9 +1202,7 @@ width: 100%;
     padding: 0px;
     filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
 }
-
 // footer//
-
 footer {
     display: flex;
     padding-left: 5%;
@@ -1302,7 +1239,5 @@ h3 {
     margin-top: 16px;
 }
 }
-}
-}
-    // Header//
+
   /*# sourceMappingURL=main.css.map */ }
