mise à jour du projet complet

--- a/ASSETS/sass/variable.scss
+++ b/ASSETS/sass/variable.scss
@@ -8,3 +8,5 @@ $main-Secondary:#FF79DA;
 $main-Tertiary:#99E2D0;
 $graduate-color:#9356DC,#FF79DA;
 $Background-color-cards:#EAEAEA;
+// $tablet:"only screen and (min-width: 769px) and (max-width: 1024px)";
+// $mobile: "only screen and (max-width:768px)";
