--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -1,20 +1,8 @@
-*{outline:1px solid red; }
-$font-stack: roboto-regular, sans-serif;
-$font-stack2: "Roboto", sans-serif;
-$font-stack3:"Shrikhand", serif;
-$font-stack4:"Roboto Condensed", sans-serif;
-$Background-color: #F6F6F6;
-$main-primary:#9356DC;
-$main-Secondary:#FF79DA;
-$main-Tertiary:#99E2D0;
-$graduate-color:#9356DC,#FF79DA;
-$Background-color-cards:#EAEAEA;
-@mixin flexbox { display: flex; justify-content: center; align-items: center;}
-@mixin flexdirectionrow {display: flex;flex-direction: row; }
-@mixin flexdirectioncolumn {display: flex;flex-direction: column; }
-// }
-    *{outline:1px solid red;
+@import "mixins.scss";
+@import "variable.scss";
 
+
+*{outline:1px solid red;
 .shrikhand-regular {
     font-family: "Shrikhand", serif;
 }
@@ -153,11 +141,11 @@ main {
     padding-left: 4%;
 } 
 // Restaurant section//
-svg {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 10px;
-}
+// svg {
+//     display: flex;
+//     justify-content: space-around;
+//     padding-right: 10px;
+// }
 .new-badge{
     position: absolute;
     top: 10px;
@@ -429,7 +417,7 @@ h3 {
 }
 } 
 }
-@media screen and (min-width:769px) and (max-width: 1024px) {
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
 // header//
 header { 
     box-shadow: 0px 4px 7.5px 0px rgba(9, 0, 0, 0.5);
@@ -556,11 +544,11 @@ main {
     padding-left: 4%;
 } 
 // Restaurant section//
-svg {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 10px;
-}
+// svg {
+//     display: flex;
+//     justify-content: space-around;
+//     padding-right: 10px;
+// }
 .new-badge{
     position: absolute;
     top: 10px;
@@ -828,8 +816,7 @@ h3 {
 }
 }
 }
-@media only screen and (max-width: 768px) { 
-
+@media only screen and (max-width:768px) { 
 .shrikhand-regular {
     font-family: "Shrikhand", serif;
 }
@@ -966,11 +953,11 @@ main {
     padding-left: 4%;
 } 
 // Restaurant section//
-svg {
-    display: flex;
-    justify-content: space-around;
-    padding-right: 10px;
-}
+// svg {
+//     display: flex;
+//     justify-content: space-around;
+//     padding-right: 10px;
+// }
 .new-badge{
     position: absolute;
     top: 10px;
@@ -1207,7 +1194,8 @@ footer {
     display: flex;
     padding-left: 5%;
     justify-content: center;
-    gap: 20px;
+    // gap: 20px;
+    gap:10px;
     background-color: #353535;
     color: white;
     align-items: flex-end;
@@ -1238,6 +1226,23 @@ h3 {
     gap: 20px;
     margin-top: 16px;
 }
+
+}.navbar {
+#arrow { 
+display: flex;
+gap:10px;
 }
+}
+// Accueil section //
+.accueil-section{
+    width: 100%;
+    height: 275px;
+}
+.images-bouff{
+    width: 50%;
+}
+// Page 2 index html "La palette du goût"//
+
+// Header//
 
   /*# sourceMappingURL=main.css.map */ }
