--- a/ASSETS/sass/styles.css
+++ b/ASSETS/sass/styles.css
@@ -798,7 +798,7 @@
     margin-top: 16px;
   }
 }
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width:768px) {
   .shrikhand-regular {
     font-family: "Shrikhand", serif;
   }
@@ -1171,7 +1171,7 @@
     display: flex;
     padding-left: 5%;
     justify-content: center;
-    gap: 10px;
+    gap: 20px;
     background-color: #353535;
     color: white;
     align-items: flex-end;
@@ -1205,14 +1205,16 @@
   }
   .navbar #arrow {
     display: flex;
-    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
   }
   .accueil-section {
     width: 100%;
     height: 275px;
   }
-  .images-bouff {
-    width: 50%;
+  .accueil-section .accueil-img {
+    width: 30%;
   }
 
 }
