mise a jour secondary

--- a/ASSETS/sass/main.scss
+++ b/ASSETS/sass/main.scss
@@ -1241,6 +1241,12 @@ gap:10px;
 .images-bouff{
     width: 50%;
 }
+h1 { 
+    font-size: 22px;
+}
+h2 { 
+    font-size: 20px;
+}
 // Page 2 index html "La palette du goût"//
 
 // Header//
