--- a/ASSETS/assets/styles.css
+++ b/ASSETS/assets/styles.css
@@ -401,6 +401,117 @@
   gap: 20px;
   margin-top: 16px;
 }
+* main {
+  width: 100%;
+  max-width: 1440px;
+}
+* .arrow {
+  display: flex;
+  justify-content: start;
+  gap: 274px;
+}
+* .arrow .logo {
+  width: 25%;
+  object-fit: contain;
+}
+* .arrow #arrow {
+  display: flex;
+  margin-right: 70px;
+}
+* .accueil-section {
+  width: 100%;
+  height: 251px;
+}
+* .img-menu {
+  width: 100%;
+  height: 275px;
+  background-size: cover;
+  object-fit: cover;
+}
+
+.price {
+  display: flex;
+  flex-direction: column;
+  margin-right: 68px;
+  margin-left: 66px;
+  width: 87%;
+}
+.price .title-two {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.price .title-three {
+  display: inline-block;
+  width: 16%;
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  font-size: 16px;
+  margin-left: 0px;
+}
+.price .border-bottom {
+  border-bottom: solid 3px #99E2D0;
+  padding-bottom: 2px;
+  width: 17%;
+}
+.price .border-btm {
+  border-bottom: solid 3px #99E2D0;
+  padding-bottom: 2px;
+  width: 11%;
+}
+.price .colo {
+  width: 95%;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.price .colo .dessert {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-top: 40px;
+  margin-bottom: 40px;
+}
+.price .colo .flat {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding-top: 40px;
+}
+.price .card-content {
+  width: 100%;
+  border-radius: 15.04px;
+}
+.price .card-content .card-title {
+  font-family: roboto-regular, sans-serif;
+  font-weight: normal;
+  font-size: 18px;
+  width: 96%;
+}
+.price .card-content .card-subtitle {
+  display: flex;
+  justify-content: space-between;
+  font-family: "Roboto", sans-serif;
+  font-weight: lighter;
+  font-size: 15.04px;
+  width: 96%;
+}
+.price .card-content .euro {
+  width: 27px;
+  font-weight: bold;
+  padding-right: 8px;
+}
+.price .card-content .card-txt {
+  width: 100%;
+}
+.price .explore-button {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #F6F6F6;
+  padding-bottom: 40px;
+}
 
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
   header {
@@ -1231,11 +1342,22 @@
   font-size: 28px;
 }
 .price .title-three {
-  width: 91%;
+  display: inline-block;
+  width: 16%;
   font-family: "Roboto", sans-serif;
   font-weight: lighter;
   font-size: 16px;
   margin-left: 0px;
+}
+.price .border-bottom {
+  border-bottom: solid 3px #99E2D0;
+  padding-bottom: 2px;
+  width: 17%;
+}
+.price .border-btm {
+  border-bottom: solid 3px #99E2D0;
+  padding-bottom: 2px;
+  width: 11%;
 }
 .price .colo {
   display: flex;
@@ -1278,6 +1400,7 @@
 .price .card-content .euro {
   width: 27px;
   font-weight: bold;
+  padding-right: 8px;
 }
 .price .card-content .card-txt {
   width: 100%;
@@ -1292,6 +1415,114 @@
   padding-bottom: 40px;
 }
 
+@media (min-width: 769px) and (max-width: 1024px) {
+  .arrow {
+    display: flex;
+    justify-content: start;
+    gap: 274px;
+  }
+  .arrow .logo {
+    width: 25%;
+    object-fit: contain;
+  }
+  .arrow #arrow {
+    display: flex;
+    margin-right: 70px;
+  }
+  .accueil-section {
+    width: 100%;
+    height: 251px;
+  }
+  .img-menu {
+    width: 100%;
+    height: 275px;
+    background-size: cover;
+    object-fit: cover;
+  }
+  .price {
+    display: flex;
+    flex-direction: column;
+    margin-right: 68px;
+    margin-left: 66px;
+    width: 87%;
+  }
+  .price .title-two {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .price .title-three {
+    display: inline-block;
+    width: 16%;
+    font-family: "Roboto", sans-serif;
+    font-weight: lighter;
+    font-size: 16px;
+    margin-left: 0px;
+  }
+  .price .border-bottom {
+    border-bottom: solid 3px #99E2D0;
+    padding-bottom: 2px;
+    width: 17%;
+  }
+  .price .border-btm {
+    border-bottom: solid 3px #99E2D0;
+    padding-bottom: 2px;
+    width: 11%;
+  }
+  .price .colo {
+    width: 75%;
+    margin-left: 12%;
+    margin-right: 3%;
+  }
+  .price .colo .dessert {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-top: 40px;
+    margin-bottom: 40px;
+  }
+  .price .colo .flat {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    padding-top: 40px;
+  }
+  .price .card-content {
+    width: 85%;
+    border-radius: 15.04px;
+  }
+  .price .card-content .card-title {
+    font-family: roboto-regular, sans-serif;
+    font-weight: normal;
+    font-size: 18px;
+    width: 96%;
+  }
+  .price .card-content .card-subtitle {
+    display: flex;
+    justify-content: space-between;
+    font-family: "Roboto", sans-serif;
+    font-weight: lighter;
+    font-size: 15.04px;
+    width: 96%;
+  }
+  .price .card-content .euro {
+    width: 27px;
+    font-weight: bold;
+    padding-right: 8px;
+  }
+  .price .card-content .card-txt {
+    width: 100%;
+  }
+  .price .explore-button {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #F6F6F6;
+    padding-bottom: 40px;
+  }
+}
 
 
 /*# sourceMappingURL=styles.css.map */
