--- a/ASSETS/sass/variable.scss
+++ b/ASSETS/sass/variable.scss
@@ -8,5 +8,5 @@ $main-Secondary:#FF79DA;
 $main-Tertiary:#99E2D0;
 $graduate-color:#9356DC,#FF79DA;
 $Background-color-cards:#EAEAEA;
-// $tablet:"screen and (min-width: 769px) and (max-width: 1024px)";
+$tablet:"(min-width: 769px) and (max-width: 1024px)";
 $mobile: "(max-width:768px)";
